--- a/index.html
+++ b/index.html
@@ -76,11 +76,17 @@
     text-align: center;
     margin-top: 20px;
   }
+
+  h2 {
+    text-align: center;
+    margin-top: 20px;
+  }
 </style>
 </head>
 <body>
 
-<h1>RED Player</h1>
+<h1>RED Radio Player</h1>
+<h2>Once coded, never beaten...</h2>
 <div class="container" id="radio-container"></div>
 
 <div id="player-container">
